[package]
name = "learn_wGPU"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = "0.17.0"
winit = "0.28.6"
bytemuck = { version = "1.14.0", features = ["derive"]}
image = "0.24.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "0.17.0", features = ["webgl"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
] }
