[package]
name = "learn_wGPU"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = "0.17.0"
winit = "0.28.6"
bytemuck = { version = "1.14.0", features = ["derive"]}
image = "0.24.7"
cgmath = "0.18.0"
anyhow = "1.0.75"
tobj = { version = "4.0.0" , features = ["async"]}

[build-dependencies]
anyhow = "1.0.75"
fs_extra = "1.3.0"
glob = "0.3.1"